--- a/platforms/ios/www/style.css
+++ b/platforms/ios/www/style.css
@@ -15,12 +15,22 @@ canvas {
   z-index: 1;
 }
 
-#link {
+#main {
   display: none;
   position: absolute;
   width: 400px;
   height: 120px;
-  bottom: 0px;
+  top: 370px;
   left: 184px;
+  z-index: 100;
+}
+
+#learn {
+  display: none;
+  position: absolute;
+  width: 768px;
+  height: 120px;
+  bottom: 0px;
+  left: 0px;
   z-index: 100;
 }
